chore: small workaround for layout issue

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body,
+html {
+  @apply h-full;
+}
+
+body {
+  @apply antialiased;
+}
